# nitidus

./: .clang-format  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
gradle/: libs.versions.toml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  URH.cpp  hookMain.cpp  il2cppHook.cpp  main.cpp  utils.cpp
module/src/main/cpp/examples/: demo.cpp  types.hpp
module/src/main/cpp/includes/: URH.hpp  hookMain.hpp  il2cppHook.hpp  main.hpp  types.hpp  utils.hpp  zygisk.hpp
module/src/main/cpp/includes/UnityResolve.hpp/: UnityResolve.hpp
